fix(preregistration): fixed breaks in registration (#665)

--- a/src/styles/_common.scss
+++ b/src/styles/_common.scss
@@ -84,6 +84,10 @@
   word-break: break-word;
 }
 
+.preserve-whitespace {
+  white-space: pre-wrap;
+}
+
 // ------------------------- Universal custom hover state -------------------------
 
 .custom-dark-hover:hover:not(:disabled) {
